<resources>
    <string name="app_name">Logical Defence</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_about">About</string>
    <string name="catlbl">Categories</string>
    <string name="subTitle">The beautiful list of logical fallacies</string>
    <string name="section_1">Appeal to the Mind</string>
    <string name="section_2">Appeal to the Emotions</string>
    <string name="section_3">Faulty Deduction</string>
    <string name="section_4">Garbled Cause &amp; Effect</string>
    <string name="section_5">Manipulating Content</string>
    <string name="section_6">On the Attack</string>
    <string name="section_7">Async Fallacies</string>
    <string name="fallacies_titles_1_1">Appeal to Anonymous Authority</string>
    <string name="fallacies_titles_1_2">Appeal to Authority</string>
    <string name="fallacies_titles_1_3">Appeal to Common Practice</string>
    <string name="fallacies_titles_1_4">Appeal to Ignorance</string>
    <string name="fallacies_titles_1_5">Appeal to Incredulity</string>
    <string name="fallacies_titles_1_6">Appeal to Money</string>
    <string name="fallacies_titles_1_7">Appeal to Novelty</string>
    <string name="fallacies_titles_1_8">Appeal to Popular Belief</string>
    <string name="fallacies_titles_1_9">Appeal to Probability</string>
    <string name="fallacies_titles_1_10">Appeal to Tradition</string>
    <string name="fallacies_descs_1_1">Using evidence from an unnamed \'expert\' or \'study\' or generalized group (like \'scientists\') to claim something is true.</string>
    <string name="fallacies_descs_1_2">Claiming something is true because an (a person holding authority) \'expert\' says it is.</string>
    <string name="fallacies_descs_1_3">Claiming something is true because it\'s commonly practiced.</string>
    <string name="fallacies_descs_1_4">A claim is true simply because it has not been proven false (or false because it has not been proven true).</string>
    <string name="fallacies_descs_1_5">Because a claim sounds unbelievable, it must not be true.</string>
    <string name="fallacies_descs_1_6">Supposing that, if someone is rich or something is expensive, then it affects the truth of the claim.</string>
    <string name="fallacies_descs_1_7">Supposing something is better because it is new or newer.</string>
    <string name="fallacies_descs_1_8">Claiming something is true because the majority of people believe it.</string>
    <string name="fallacies_descs_1_9">Assuming because something could happen, it will inevitably happen.</string>
    <string name="fallacies_descs_1_10">Claiming something is true because it\'s (apparently) always been that way.</string>
    <string name="fallacies_examples_1_1">\'They say that it takes 7 years to digest chewing gum.\'</string>
    <string name="fallacies_examples_1_2">\'Over 4000 prominent scientists and engineers dispute global warming.\'</string>
    <string name="fallacies_examples_1_3">\'This bank has some problems with corruption, but there\'s nothing going on here that doesn\'t go on in all other banks.\'</string>
    <string name="fallacies_examples_1_4">\'Nobody has proven to me there\'s a God. So I know there is no God.\'</string>
    <string name="fallacies_examples_1_5">\'The eye is an incredibly complex biomechanical machine with thousands of interlocking parts. How could that exist without an intelligent designer?\'</string>
    <string name="fallacies_examples_1_6">\'If it costs more, it must be better.\'</string>
    <string name="fallacies_examples_1_7">\'Awesome! The latest version of this operating system is going to make my computer faster and better..\'</string>
    <string name="fallacies_examples_1_8">\'Milk is essential for healthy bones.\'</string>
    <string name="fallacies_examples_1_9">\'There are billions of galaxies with billions of stars in the universe, so there must be another planet with intelligent life on it.\'</string>
    <string name="fallacies_examples_1_10">\'The government has always existed, therefore society cannot live without one.\'</string>
    <string name="fallacies_titles_2_1">Appeal to Consequences of a Belief</string>
    <string name="fallacies_titles_2_2">Appeal to Fear</string>
    <string name="fallacies_titles_2_3">Appeal to Flattery</string>
    <string name="fallacies_titles_2_4">Appeal to Nature</string>
    <string name="fallacies_titles_2_5">Appeal to Pity</string>
    <string name="fallacies_titles_2_6">Appeal to Ridicule</string>
    <string name="fallacies_titles_2_7">Appeal to Spite</string>
    <string name="fallacies_titles_2_8">Appeal to Wishful Thinking</string>
    <string name="fallacies_descs_2_1">Arguing a belief is false because it implies something you\'d rather not believe.</string>
    <string name="fallacies_descs_2_2">An argument is made by increasing fear and prejudice towards the opposing side.</string>
    <string name="fallacies_descs_2_3">Using an irrelevant compliment to slip in an unfounded claim which is accepted along with the compliment.</string>
    <string name="fallacies_descs_2_4">Making your claim seem more true by drawing a comparison with the \'good\' natural world.</string>
    <string name="fallacies_descs_2_5">Attempt to induce pity to sway opponents.</string>
    <string name="fallacies_descs_2_6">Presenting the opponent\'s argument in a way that makes it appear absurd.</string>
    <string name="fallacies_descs_2_7">Dismissing a claim by appealing to personal bias against the claimant.</string>
    <string name="fallacies_descs_2_8">Suggesting a claim is true or false just because you strongly hope it is.</string>
    <string name="fallacies_examples_2_1">\'That can\'t be the Senator on that sex-tape. If it were, he\'d be lying about not knowing her, and he\'s not the kind of man who would lie.\'</string>
    <string name="fallacies_examples_2_2">\'Before you know there will be more mosques than churches.\'</string>
    <string name="fallacies_examples_2_3">\'Intelligent and sophisticated readers will of course recognise a fallacy like this when they read one.\'</string>
    <string name="fallacies_examples_2_4">\'Of course homosexuality is unnatural. You don\'t see same-sex animals copulating.\'</string>
    <string name="fallacies_examples_2_5">\'The former dictator is an old, dying man. It\'s wrong to make him stand trial for these alleged offenses.\'</string>
    <string name="fallacies_examples_2_6">\'Faith in God is like believing in Santa Claus and the Tooth Fairy.\'</string>
    <string name="fallacies_examples_2_7">\'Don\'t you just hate how those rich Liberal Hollywood actors go on TV to promote their agendas?\'</string>
    <string name="fallacies_examples_2_8">\'The President wouldn\'t lie. He\'s our leader and a good American.\'</string>
    <string name="fallacies_titles_3_1">Anecdotal Evidence</string>
    <string name="fallacies_titles_3_2">Composition</string>
    <string name="fallacies_titles_3_3">Division</string>
    <string name="fallacies_titles_3_4">Design Fallacy</string>
    <string name="fallacies_titles_3_5">Gambler\'s Fallacy</string>
    <string name="fallacies_titles_3_6">Hasty Generalization</string>
    <string name="fallacies_titles_3_7">Jumping to Conclusions</string>
    <string name="fallacies_titles_3_8">Middle Ground</string>
    <string name="fallacies_titles_3_9">Perfectionist Fallacy</string>
    <string name="fallacies_titles_3_10">Relativist Fallacy</string>
    <string name="fallacies_titles_3_11">Spotlight</string>
    <string name="fallacies_titles_3_12">Sweeping Generalisation</string>
    <string name="fallacies_titles_3_13">Undistributed Middle</string>
    <string name="fallacies_descs_3_1">Discounting evidence arrived at by systematic search or testing in favor of a few first hand stories.</string>
    <string name="fallacies_descs_3_2">Assuming that characteristics or beliefs of some of a group applies to the entire group.</string>
    <string name="fallacies_descs_3_3">Assuming that characteristics or beliefs of a group automatically apply to any individual member.</string>
    <string name="fallacies_descs_3_4">Assuming that because something is nicely designed or beautifully visualized, it\'s more valid or better.</string>
    <string name="fallacies_descs_3_5">Assuming a history of independent outcomes will affect future outcomes.</string>
    <string name="fallacies_descs_3_6">Drawing a general conclusion from a tiny sample.</string>
    <string name="fallacies_descs_3_7">Drawing a quick conclusion without fairly considering relevant (and easily available) evidence.</string>
    <string name="fallacies_descs_3_8">Assuming because two opposing arguments have merit, the answer must lie somewhere in between them.</string>
    <string name="fallacies_descs_3_9">Assuming that the only option on the table is perfect success, then rejecting anything that will not work perfectly.</string>
    <string name="fallacies_descs_3_10">Rejecting a claim because of a belief that truth is relative to a person or group.</string>
    <string name="fallacies_descs_3_11">Assuming an observation from a small sample size applies to an entire group.</string>
    <string name="fallacies_descs_3_12">Applying a general rule too broadly.</string>
    <string name="fallacies_descs_3_13">Assuming because two things share a property, that makes them the same thing.</string>
    <string name="fallacies_examples_3_1">\'I\'m going to carry on smoking. My grandfather smoked 40 a day until he died at the age of 90.\'</string>
    <string name="fallacies_examples_3_2">\'Recent terrorist attacks have been carried out by Islamic groups, therefore all terrorists are muslims.\'</string>
    <string name="fallacies_examples_3_3">\'Many Conservatives wish to ban gay marriage, discredit climate change, and deny evolution, therefore all conservatives are homophobic, anti-environment creationists.\'</string>
    <string name="fallacies_examples_3_4">\'Elementary OS is the most well designed and best looking Linux distribution, therefore it is clearly superior.\'</string>
    <string name="fallacies_examples_3_5">\'I\'ve flipped a coin 10 times in a row and it\'s been heads each time, therefore the next coin flip is more likely to come up with tails.\'</string>
    <string name="fallacies_examples_3_6">\'I just got cut up by the woman driver in front. Women can\'t drive.\'</string>
    <string name="fallacies_examples_3_7">\'She wants birth control in her medical cover? What a slut!\'</string>
    <string name="fallacies_examples_3_8">\'I rear ended your car but I don\'t think I should pay for the damage. You think I should pay for all the damage. A fair compromise would be to split the bill in half.\'</string>
    <string name="fallacies_examples_3_9">\'What\'s the point of these anti-drunk driving ad campaigns? People are still going to drink and drive no matter what.\'</string>
    <string name="fallacies_examples_3_10">\'That\'s perhaps true for you, but it\'s not true for me.\'</string>
    <string name="fallacies_examples_3_11">\'This large shoe manufacturer employs children in sweatshops. Therefore all shoe companies are evil child-slave owners!\'</string>
    <string name="fallacies_examples_3_12">\'Those young men rioted because they lacked morally responsible fathers.\'</string>
    <string name="creator">Created by LukeStoneHm\n2015</string>
    <string name="about_more">A simple, but beautiful app that presents the logical fallacies of the world in a fantastically eye pleasing manner.\n\nThis app is an open source project and is licensed under the GPL 2 license.\n\nFeel free to browse the source code which is hosted on GitHub.\n\nhttps://github.com/LukeStonehm/LogicalDefence/</string>
</resources>